Changes from V7.4
=================

Vernacular commands

- "Declare ML Module" now allows us to import .cma files. This avoids to use a
   bunch of "Declare ML Module" statements when using several ML files.
- "Set Printing Width n" added, allows to change the size of width printing
   (TODO : doc).
Gallina

- New syntax of the form "Inductive bool : Set := true, false : bool." for
  enumerated types

Grammar extensions

- UTF-8 encoded unicode blocks 0380-03FF (greek letters) and 2100-214F
  (letter-like, including aleph and double N,Z,Q,R) are supported
  identifiers; UTF-8 unicode blocs 2200-22FF (mathematical operators),
  2300-23FF (miscellaneous technical, including sqrt symbol) and
  2600-26FF (miscellaneous symbols) are supported symbols

Bugs

- Rename bug fixed (#244)

Changes from V7.3.1 to V7.4
===========================

Symbolic notations

- Introduction of a notion of scope gathering notations in a consistent set;
  a notation sets has been developped for nat, Z and R (undocumented)
- New command "Notation" for declaring notations simultaneously for
  parsing and printing (see chap 10 of the reference manual)
- Declarations with only implicit arguments now handled (e.g. the
  argument of nil can be set implicit; use !nil to refer to nil
  without arguments)
- "Print Scope sc" and "Locate ntn" allows to know to what expression a 
  notation is bound
- New defensive strategy for printing or not implicit arguments to ensure
  re-type-checkability of the printed term
- In Grammar command, the only predefined non-terminal entries are ident,
  global, constr and pattern (e.g. nvar, numarg disappears); the only
  allowed grammar types are constr and pattern; ast and ast list are no
  longer supported; some incompatibilities in Grammar: when a syntax is a 
  initial segment of an other one,  Grammar does not work, use Notation

Library

- Lemmas in Set from Compare_dec.v (le_lt_dec, ...) and Wf_nat.v